--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 
 title: Rogen George
 description: This is my personal website.
-logo: /assets/pic.png
+logo: /assets/photo.jpg
